[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fso-platform"
version = "1.0.0"
description = "无线光通信系统链路特性可视化平台"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "杨博文"},
]
keywords = ["FSO", "free-space-optics", "simulation", "PyQt5", "matplotlib"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "PyQt5>=5.15",
    "numpy>=2.0",
    "scipy>=1.11",
    "matplotlib>=3.9",
]

[project.scripts]
fso-platform = "fso_platform.__main__:main"

[project.urls]
Homepage = "https://github.com/yangbowen/fso-platform"

[tool.setuptools.packages.find]
where = ["."]
include = ["fso_platform*"]
